src/test/deca/context/invalid/test_instanceof_invalid_rightoperand.deca
// Description:
//    Programme testant l'instruction instanceof
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 27 (L'opérande de droite n'est pas une classe)
//
// Historique:
//    cree le 21/01/2021

class A  {
	protected int x ;
	float y;
	int getX(){
		return x;
	}
	float getY(){
		return x;
	}
}
{
	A a = new A();	
	int b = 5;
	if(a instanceof int){
		println("true");
	}
}
